done with bonus

--- a/final_lib/Makefile
+++ b/final_lib/Makefile
@@ -3,10 +3,10 @@
 #                                                         :::      ::::::::    #
 #    Makefile                                           :+:      :+:    :+:    #
 #                                                     +:+ +:+         +:+      #
-#    By: made-alm <marvin@42.fr>                    +#+  +:+       +#+         #
+#    By: made-alm <made-alm@student.42porto.com>    +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
-#    Created: 2022/12/05 14:56:02 by made-alm          #+#    #+#              #
-#    Updated: 2023/06/30 19:41:13 by made-alm         ###   ########.fr        #
+#    Created: 2023/07/10 22:05:03 by made-alm          #+#    #+#              #
+#    Updated: 2023/07/10 22:05:07 by made-alm         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
